[package]
name = "birdnet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper_wasi = { version = "0.15", features = ["full"]}
tokio_wasi = { version = "1", features = ["rt", "macros", "net", "time", "io-util"]}
wasi-nn = "0.4.0"
anyhow = "1.0"
hound = { version = "3.4.0" }
bytes = { version = "1" }
